@@ -33,6 +33,7 @@
      />
 
   <include package=".export" />
+  <include package=".mailto" />
   <include package=".update" />
 
 </configure>
