@@ -1,0 +1,25 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:z3c="http://namespaces.zope.org/z3c"
+    xmlns:gocept="http://namespaces.gocept.com/zcml">
+
+  <gocept:pagelet
+      for="icemac.addressbook.interfaces.IAddressBook"
+      layer="icemac.addressbook.browser.interfaces.IAddressBookLayer"
+      name="mailto.html"
+      class=".mailto.MailTo"
+      template="mailto.pt"
+      permission="icemac.addressbook.ViewAddressBook" />
+
+  <z3c:siteMenuItem
+     manager="icemac.addressbook.browser.search.result.handler.manager.ISearchResultHandlers"
+     layer="icemac.addressbook.browser.interfaces.IAddressBookLayer"
+     name="mailto"
+     title="E-Mail (Creates a link to send e-mails.)"
+     viewName="@@mailto.html"
+     class="icemac.addressbook.browser.search.result.handler.manager.SearchResultHandler"
+     permission="icemac.addressbook.ViewAddressBook"
+     weight="30"
+     />
+
+</configure>
